include/El/lapack_like/factor.py


lib.ElApplyQAfterLQ_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQ_s.restype = c_uint
lib.ElApplyQAfterLQ_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQ_d.restype = c_uint
lib.ElApplyQAfterLQ_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQ_c.restype = c_uint
lib.ElApplyQAfterLQ_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQ_z.restype = c_uint
lib.ElApplyQAfterLQDist_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQDist_s.restype = c_uint
lib.ElApplyQAfterLQDist_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQDist_d.restype = c_uint
lib.ElApplyQAfterLQDist_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQDist_c.restype = c_uint
lib.ElApplyQAfterLQDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterLQDist_z.restype = c_uint
def ApplyQAfterLQ(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag or d.tag != Base(A.tag):
    raise Exception('Datatypes of {A,t,B} must match and d must have base type')
  if type(A) is Matrix:
    if   A.tag == sTag: 
      lib.ElApplyQAfterLQ_s(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == dTag:
      lib.ElApplyQAfterLQ_d(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == cTag:
      lib.ElApplyQAfterLQ_c(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == zTag:
      lib.ElApplyQAfterLQ_z(side,orient,A.obj,t.obj,d.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElApplyQAfterLQDist_s(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == dTag:
      lib.ElApplyQAfterLQDist_d(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == cTag:
      lib.ElApplyQAfterLQDist_c(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == zTag:
      lib.ElApplyQAfterLQDist_z(side,orient,A.obj,t.obj,d.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElSolveAfterLQ_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQ_s.restype = c_uint
lib.ElSolveAfterLQ_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQ_d.restype = c_uint
lib.ElSolveAfterLQ_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQ_c.restype = c_uint
lib.ElSolveAfterLQ_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQ_z.restype = c_uint
lib.ElSolveAfterLQDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQDist_s.restype = c_uint
lib.ElSolveAfterLQDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQDist_d.restype = c_uint
lib.ElSolveAfterLQDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQDist_c.restype = c_uint
lib.ElSolveAfterLQDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterLQDist_z.restype = c_uint
def SolveAfterLQ(orient,A,t,d,B):
  if type(A) is Matrix:
    X = Matrix(A.tag)
    if   A.tag == sTag: 
      lib.ElSolveAfterLQ_s(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == dTag:
      lib.ElSolveAfterLQ_d(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterLQ_c(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == zTag:
      lib.ElSolveAfterLQ_z(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    else: raise Exception('Unsupported datatype')
    return X
  elif type(A) is DistMatrix:
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    if   A.tag == sTag: 
      lib.ElSolveAfterLQDist_s(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == dTag:
      lib.ElSolveAfterLQDist_d(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterLQDist_c(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == zTag:
      lib.ElSolveAfterLQDist_z(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    else: raise Exception('Unsupported datatype')
    return X
  else: raise Exception('Unsupported matrix type')

# QR factorization
# ================
lib.ElQRCtrlFillDefault_s.argtypes = [c_void_p]
lib.ElQRCtrlFillDefault_s.restype = c_uint
lib.ElQRCtrlFillDefault_d.argtypes = [c_void_p]
lib.ElQRCtrlFillDefault_d.restype = c_uint
class QRCtrl_s(ctypes.Structure):
  _fields_ = [("colPiv",bType),("boundRank",bType),("maxRank",iType),
              ("adaptive",bType),("tol",sType),("alwaysRecomputeNorms",bType)]
  def __init__(self):
    lib.ElQRCtrlFillDefault_s(pointer(self))
class QRCtrl_d(ctypes.Structure):
  _fields_ = [("colPiv",bType),("boundRank",bType),("maxRank",iType),
              ("adaptive",bType),("tol",dType),("alwaysRecomputeNorms",bType)]
  def __init__(self):
    lib.ElQRCtrlFillDefault_d(pointer(self))

(QR_IMPLICIT,QR_EXPLICIT,QR_EXPLICIT_TRIANG,QR_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElQR_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQR_s.restype = c_uint
lib.ElQR_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQR_d.restype = c_uint
lib.ElQR_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQR_c.restype = c_uint
lib.ElQR_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQR_z.restype = c_uint
lib.ElQRDist_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRDist_s.restype = c_uint
lib.ElQRDist_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRDist_d.restype = c_uint
lib.ElQRDist_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRDist_c.restype = c_uint
lib.ElQRDist_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRDist_z.restype = c_uint

lib.ElQRExplicit_s.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicit_s.restype = c_uint
lib.ElQRExplicit_d.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicit_d.restype = c_uint
lib.ElQRExplicit_c.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicit_c.restype = c_uint
lib.ElQRExplicit_z.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicit_z.restype = c_uint
lib.ElQRExplicitDist_s.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicitDist_s.restype = c_uint
lib.ElQRExplicitDist_d.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicitDist_d.restype = c_uint
lib.ElQRExplicitDist_c.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicitDist_c.restype = c_uint
lib.ElQRExplicitDist_z.argtypes = [c_void_p,c_void_p]
lib.ElQRExplicitDist_z.restype = c_uint

lib.ElQRExplicitTriang_s.argtypes = [c_void_p]
lib.ElQRExplicitTriang_s.restype = c_uint
lib.ElQRExplicitTriang_d.argtypes = [c_void_p]
lib.ElQRExplicitTriang_d.restype = c_uint
lib.ElQRExplicitTriang_c.argtypes = [c_void_p]
lib.ElQRExplicitTriang_c.restype = c_uint
lib.ElQRExplicitTriang_z.argtypes = [c_void_p]
lib.ElQRExplicitTriang_z.restype = c_uint
lib.ElQRExplicitTriangDist_s.argtypes = [c_void_p]
lib.ElQRExplicitTriangDist_s.restype = c_uint
lib.ElQRExplicitTriangDist_d.argtypes = [c_void_p]
lib.ElQRExplicitTriangDist_d.restype = c_uint
lib.ElQRExplicitTriangDist_c.argtypes = [c_void_p]
lib.ElQRExplicitTriangDist_c.restype = c_uint
lib.ElQRExplicitTriangDist_z.argtypes = [c_void_p]
lib.ElQRExplicitTriangDist_z.restype = c_uint

lib.ElQRExplicitUnitary_s.argtypes = [c_void_p]
lib.ElQRExplicitUnitary_s.restype = c_uint
lib.ElQRExplicitUnitary_d.argtypes = [c_void_p]
lib.ElQRExplicitUnitary_d.restype = c_uint
lib.ElQRExplicitUnitary_c.argtypes = [c_void_p]
lib.ElQRExplicitUnitary_c.restype = c_uint
lib.ElQRExplicitUnitary_z.argtypes = [c_void_p]
lib.ElQRExplicitUnitary_z.restype = c_uint
lib.ElQRExplicitUnitaryDist_s.argtypes = [c_void_p]
lib.ElQRExplicitUnitaryDist_s.restype = c_uint
lib.ElQRExplicitUnitaryDist_d.argtypes = [c_void_p]
lib.ElQRExplicitUnitaryDist_d.restype = c_uint
lib.ElQRExplicitUnitaryDist_c.argtypes = [c_void_p]
lib.ElQRExplicitUnitaryDist_c.restype = c_uint
lib.ElQRExplicitUnitaryDist_z.argtypes = [c_void_p]
lib.ElQRExplicitUnitaryDist_z.restype = c_uint

lib.ElQRColPiv_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPiv_s.restype = c_uint
lib.ElQRColPiv_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPiv_d.restype = c_uint
lib.ElQRColPiv_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPiv_c.restype = c_uint
lib.ElQRColPiv_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPiv_z.restype = c_uint
lib.ElQRColPivDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPivDist_s.restype = c_uint
lib.ElQRColPivDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPivDist_d.restype = c_uint
lib.ElQRColPivDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPivDist_c.restype = c_uint
lib.ElQRColPivDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElQRColPivDist_z.restype = c_uint

lib.ElQRColPivX_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElQRColPivX_s.restype = c_uint
lib.ElQRColPivX_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElQRColPivX_d.restype = c_uint
lib.ElQRColPivX_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElQRColPivX_c.restype = c_uint
lib.ElQRColPivX_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElQRColPivX_z.restype = c_uint
lib.ElQRColPivXDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElQRColPivXDist_s.restype = c_uint
lib.ElQRColPivXDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElQRColPivXDist_d.restype = c_uint
lib.ElQRColPivXDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElQRColPivXDist_c.restype = c_uint
lib.ElQRColPivXDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElQRColPivXDist_z.restype = c_uint

lib.ElQRColPivExplicit_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicit_s.restype = c_uint
lib.ElQRColPivExplicit_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicit_d.restype = c_uint
lib.ElQRColPivExplicit_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicit_c.restype = c_uint
lib.ElQRColPivExplicit_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicit_z.restype = c_uint
lib.ElQRColPivExplicitDist_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicitDist_s.restype = c_uint
lib.ElQRColPivExplicitDist_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicitDist_d.restype = c_uint
lib.ElQRColPivExplicitDist_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicitDist_c.restype = c_uint
lib.ElQRColPivExplicitDist_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElQRColPivExplicitDist_z.restype = c_uint
